src/app/components/post/post-code/post-code.scss
@use '../../../../functions' as *;
@use '../../../../var' as var;
@use '../../../../mixins' as *;

:host {
  --codeTextarea-max-height: #{px-to-rem(300)};
  --codeTextarea-min-height: #{px-to-rem(100)};
  --codeTextarea-padding-right: #{px-to-rem(75)};

  &:has(.expanded) {
    --codeTextarea-max-height: none;
  }
}

.code-container {
  @include content-highlight-box($focus-highlight-class: '.code-textarea');

  .code-header {
    @include display-flex(center, flex-end);
    gap: px-to-rem(10);
    position: sticky;
    top: px-to-rem(15);
    margin-bottom: px-to-rem(15);

    .expand-collapse-button {
      @include expand-collapse-button();
    }

    .copy-button {
      @include button-preset();
      @include copy-interactions($class: 'copy');

      &::ng-deep .copy {
        transition: fill var.$transition-duration-medium ease-in-out;
        width: px-to-rem(15);
        height: px-to-rem(15);
        fill: var(--font-primary-color-50);
      }
    }
  }

  & pre {
    overflow-wrap: break-word;
    max-width: 100%;

    background: transparent;
    box-shadow: none;
    border: none;

    margin: 0;
    padding: 0;
    padding-right: var(--codeTextarea-padding-right);

    max-height: var(--codeTextarea-max-height);
    min-height: var(--codeTextarea-min-height);

    scrollbar-width: thin;
    scrollbar-color: rgb(60, 60, 60) transparent;

    & code {
      @include font-settings(16, 400);
      line-height: 1.5;
      white-space: pre-wrap !important; // Overwrite prism.js styles
      word-break: break-all !important; // Overwrite prism.js styles
    }
  }

  .code-textarea {
    @include font-settings(16, 400);
    display: block;
    line-height: 1.5;
    white-space: pre-wrap;
    word-break: break-all;

    background-color: transparent;

    color: var(--font-primary-color-100);
    resize: none;
    width: 100%;

    padding-right: var(--codeTextarea-padding-right);

    scrollbar-width: thin;
    scrollbar-color: rgb(60, 60, 60) transparent;

    outline: unset;
    border: none;
  }
}

